--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edison - Desenvolvedor e Designer</title>
+  <title>Edison - Desenvolvedor e UX/UI Designer</title>
   <meta name="description" content="Desencolvedor Front End & UX/UI Designer">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
