--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Edison - Desenvolvedor e UX/UI Designer</title>
   <meta name="description" content="Desencolvedor Front End & UX/UI Designer">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
